--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,38 @@
     color: black;
 }
 
+/* Navbar */
+.navbar {
+    transition: background-color 0.3s ease, color 0.3s ease;
+  }
+  
+  .navbar-brand {
+    font-size: 1.5rem;
+  }
+  
+  .nav-link {
+    font-size: 1.1rem;
+  }
+  
+  .navbar-dark .navbar-toggler-icon {
+    background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3e%3cpath stroke='rgba(0, 0, 0, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+  }
+  
+  .navbar-light .navbar-toggler-icon {
+    background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3e%3cpath stroke='rgba(255, 255, 255, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+  }
+  
+  .navbar-toggler:focus {
+    outline: none;
+  }
+  
+  /* Dark mode */
+  .navbar-dark .navbar-toggler {
+    color: rgba(255, 255, 255, 0.5);
+  }
+  
+  /* Light mode */
+  .navbar-light .navbar-toggler {
+    color: rgba(0, 0, 0, 0.5);
+  }
+  
